Agregar archivo configurado LFS html y css

--- a/bici.html
+++ b/bici.html
@@ -1,15 +1,3 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="UTF-8">
-    <title>EcoBici</title>
-    <link rel="stylesheet" type="text/css" href="bici.css">
-</head>
-<body>
-    <div class="iframe-container">
-        <h1>Gráficos y mapas del sistema de bicicles de la Ciudad de Buenos Aires</h1>
-        <embed src="https://app.powerbi.com/view?r=eyJrIjoiYjc5M2U1ZDAtYTU4Zi00NGNlLTk3MTQtMjM2ZjZjMmUyYWVmIiwidCI6IjdiMjk5ZDc3LWJkYTktNGIyZC1iZDc3LTExMzgyOTMxNDJlOCIsImMiOjl9" width="1000" height="800"></embed>
-        
-    </div>
-</body>
-</html>
+version https://git-lfs.github.com/spec/v1
+oid sha256:f95edc0aa695ed7ac219a17f6f83e277d27aa9d59d2088a2cccdc3b3e8b8c24c
+size 543
